# ai-ml-sdk-model-converter

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS.txt  README.md  RELEASE_NOTES.md  REUSE.toml  pyproject.toml  requirements.txt  tooling-requirements.txt
.claude/: CLAUDE.md  agents  commands  resources
cmake/: flatbuffers.cmake  llvm-project.cmake  package.cmake  tosa_tools.cmake
cmake/toolchain/: clang.cmake  gcc.cmake  gnu_compiler_options.cmake  linux-aarch64-gcc.cmake
docs/: Doxyfile  docs.cmake  redirect-output.cmake
docs/source/: building.rst  cloning.rst  conf.py  index.rst  limitations.rst  usage.rst
patches/: llvm.patch
pip_package/: pyproject.toml  setup.py
scripts/: build.py
src/: compiler.cpp
src/conversion/: model_partition_marking.cpp  model_partitioning.cpp  serialize_vgf.cpp  type_narrowing.cpp
test/: conftest.py
test/json/: add.json  custom.json  double_conv2d.json  double_custom.json  rescale.json  rescale_input_signed.json
test/mlir/: conv2d.mlir  double_conv2d.mlir  maxpool.mlir  rescale.mlir  rescale_input_signed.mlir
