#
# SPDX-FileCopyrightText: Copyright 2025 Arm Limited and/or its affiliates <open-source-office@arm.com>
# SPDX-License-Identifier: Apache-2.0
#
[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_ml_sdk_model_converter"
description = "ML SDK Model Converter"
readme = "README.md"
dynamic = ["version"]

[project.scripts]
model_converter = "model_converter.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
model_converter = ["binaries/**"]

[tool.setuptools_scm]
fallback_version = "0.9.0"
